--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yahavan Portfolio</title>
 </head>
-<body>
+<body style="background-color: beige;">
     <h1>Yahavan Mohan</h1>
     <h2>Web Developer</h2>
-    <p>Get to know me!</p>
+    <p style="color: aqua;">Get to know me!</p>
 </body>
 </html>
