Changed color again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body style="background-color: beige;">
     <h1>Yahavan Mohan</h1>
     <h2>Web Developer</h2>
-    <p style="color: aqua;">Get to know me!</p>
+    <p style="color: seagreen;" >Get to know me!</p>
 </body>
 </html>
